# ysim

./: CMakeLists.txt  README.md  main.cpp  registers.txt  test.s
global/: CMakeLists.txt  utils.cpp  utils.h
include/: CMakeLists.txt  assembler.h  instruction.h  lexer.h  parser.h  token.h  utilities.h
mem/: CMakeLists.txt  mainmem.h
mem/include/: cache.h  utilities.h
mem/src/: cache.cpp
proc/: CMakeLists.txt
proc/include/: alu.h  cnd_flags.h  instr_mem.h  pipeline_reg.h  pproc.h  reg.h  regfile.h  seqproc.h
proc/src/: alu.cpp  instr_mem.cpp  pipeline_reg.cpp  reg.cpp  regfile.cpp  seqproc.cpp
yassembler/: CMakeLists.txt
yassembler/include/: assembler.h  instruction.h  lexer.h  parser.h  token.h  utilities.h
yassembler/src/: assembler.cpp  lexer.cpp  parser.cpp  utilities.cpp
